# observability-mcp

./: .gitignore  ASSESSMENT.md  Dockerfile  README.md  docker-compose.yml  glama.json  pyproject.toml
docs/: OPENTELEMETRY_ECOSYSTEM.md  OPENTELEMETRY_GUIDE.md
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
monitoring/grafana/dashboards/: mcp-observability.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
src/observability_mcp/: cli.py  server.py
tests/: test_server.py
