[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-mcp"
version = "0.1.0"
description = "FastMCP 2.14.1-powered observability server for monitoring MCP ecosystems with OpenTelemetry integration"
authors = [
    {name = "Sandra Schipal", email = "sandra@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "observability", "opentelemetry", "monitoring", "fastmcp", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastMCP",
]

dependencies = [
    "fastmcp>=2.14.3,<3.0.0",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-instrumentation>=0.50b0",
    "opentelemetry-exporter-prometheus>=0.50b0",
    "opentelemetry-sdk>=1.28.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "pydantic[email]>=2.9.0",
    "rich>=13.8.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.6.0",
    "fakeredis>=2.32.1",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/sandraschi/observability-mcp"
Repository = "https://github.com/sandraschi/observability-mcp"
Issues = "https://github.com/sandraschi/observability-mcp/issues"
Documentation = "https://observability-mcp.readthedocs.io/"
Changelog = "https://github.com/sandraschi/observability-mcp/blob/main/CHANGELOG.md"

[project.scripts]
observability-mcp = "observability_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = [
    "--strict-markers",
    "--cov=observability_mcp",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

